--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
@@ -10,28 +10,32 @@
         <div class="windowContent">
             <div class="split firstSplit">
                 <div class="row">
+                    <p>Nummer:</p>
+                    <p>KU 40-001</p>
+                </div>
+                <div class="row">
                     <p>Name:</p>
-                    <p>Thomas Brändle</p>
+                    <input type="text" value="Thomas Brändle">
                 </div>
                 <div class="row">
                     <p>Adresse:</p>
-                    <p>
-                        Friedaustrasse 3
-                        <br /> 9608 Ganterschwil
-                        <br /> CH - Schweiz
-                    </p>
+                    <input type="text" value="Friedaustrasse 3">
+                </div>
+                <div class="row">
+                    <p>Ort:</p>
+                    <input type="text" value="9608 Ganterschwil">
                 </div>
                 <div class="row">
                     <p>Telefon:</p>
-                    <p>+41 79 520 65 11</p>
+                    <input type="text" value="+41 79 520 65 11">
                 </div>
                 <div class="row">
                     <p>E-Mail:</p>
-                    <p>design@thomas-braendle.com</p>
+                    <input type="text" value="design@thomas-braendle.com">
                 </div>
                 <div class="row">
                     <p>Website:</p>
-                    <p>www.thomas-braendle.com</p>
+                    <input type="text" value="www.thomas-braendle.com">
                 </div>
             </div>
             <div class="split secondSplit">
