--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.sass
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.sass
@@ -42,3 +42,14 @@
 
 .dropDown select
     text-align: center
+
+.row input
+    width: 65%
+    border: 1px solid $borderColor
+    border-radius: 5px
+    background-color: white
+    padding: 5px
+    margin-bottom: 5px
+    &:focus
+        outline: none
+
