--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
@@ -44,7 +44,7 @@
                     <option value="zb_07">Teilzahlung</option>
                 </select>
                 <div class="btnBearbeiten">
-                    <p>Zahlungskonditionen bearbeiten</p>
+                    <p (click)="openGruppen()">Zahlungskonditionen bearbeiten</p>
                 </div>
                 <select name="zahlungsarten" id="zahlungsarten">
                     <option value="za_01">Rechnung</option>
@@ -52,7 +52,7 @@
                     <option value="za_03">Barzahlung</option>
                 </select>
                 <div class="btnBearbeiten">
-                    <p>Zahlungsarten bearbeiten</p>
+                    <p (click)="openGruppen()">Zahlungsarten bearbeiten</p>
                 </div>
                 <select name="artikelgruppen" id="artikelgruppen">
                     <option value="ag_01">Webentwicklung</option>
@@ -61,7 +61,7 @@
                     <option value="ag_04">Anderes</option>
                 </select>
                 <div class="btnBearbeiten">
-                    <p>Artikelgruppen bearbeiten</p>
+                    <p (click)="openGruppen()">Artikelgruppen bearbeiten</p>
                 </div>
                 <select name="kundengruppen" id="kundengruppen">
                     <option value="kg_01">Privatperson</option>
@@ -70,7 +70,7 @@
                     <option value="kg_04">Anderes</option>
                 </select>
                 <div class="btnBearbeiten">
-                    <p>Kundengruppen bearbeiten</p>
+                    <p (click)="openGruppen()">Kundengruppen bearbeiten</p>
                 </div>
                 <select name="abteilungen" id="abteilungen">
                     <option value="ab_01">Entwicklung</option>
@@ -80,7 +80,7 @@
                     <option value="ab_04">Anderes</option>
                 </select>
                 <div class="btnBearbeiten">
-                    <p>Artikelgruppen bearbeiten</p>
+                    <p (click)="openGruppen()">Artikelgruppen bearbeiten</p>
                 </div>
 
             </div>
