--- a/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
+++ b/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
@@ -9,10 +9,88 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Partner:</p>
+            <div class="popupTableFirst popupTable">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="btnBearbeiten">
+                <p>+</p>
+            </div>
         </div>
         <div class="split secondSplit">
+            <p>Anrede:</p>
+            <select name="anrede" id="anrede">
+                <option value="herr">Herr</option>
+                <option value="frau">Frau</option>
+            </select>
+            <p>Name:</p>
+            <input type="text" value="Thomas Brändle">
+            <p>E-Mail:</p>
+            <input type="text" value="thomasbraendle94@gmail.com">
+            <p>Telefon:</p>
+            <input type="text" value="+41 79 520 65 11">
+            <p>Mobile:</p>
+            <input type="text" value="+41 79 520 65 11">
+            <p>Funktion:</p>
+            <input type="text" value="Geschäftsführer">
         </div>
         <div class="split thirdSplit">
+            <p>Notizen:</p>
+            <div class="notizenHoch">
+                <textarea name="notizen" id="notizen">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</textarea>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
