--- a/src/app/_popupKomponente/belege/belege.component.html
+++ b/src/app/_popupKomponente/belege/belege.component.html
@@ -39,15 +39,10 @@
             </div>
         </div>
         <div class="split oneThird">
+            <p>Versendete Belege:</p>
             <div class="windowTable popupTable popupTableOneThird">
                 <table>
                     <thead>
-                        <tr>
-                            <th>Datum</th>
-                            <th>Dokument</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
                     </thead>
                     <tbody>
                         <tr>
