--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
@@ -9,18 +9,21 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Kunde:</p>
             <p class="contentReadonly">
                 KU 40-001<br /> Thomas Brändle<br />9608 Ganterschwil
             </p>
             <div class="btnBearbeiten">
                 <p (click)="openKundendaten()">Kundendaten bearbeiten</p>
             </div>
+            <p>Ansprechpartner:</p>
             <p class="contentReadonly">
                 Herr Thomas Brändle
             </p>
             <div class="btnBearbeiten">
                 <p (click)="openAnsprechpartner()">Ansprechpartner bearbeiten</p>
             </div>
+            <p>Rechnungsadresse:</p>
             <p class="contentReadonly">Thomas Brändle AG <br /> Friedaustrasse 3 <br /> 9608 Ganterschwil <br /> CH - Schweiz</p>
             <div class="btnBearbeiten">
                 <p (click)="openRechnungsadresse()">Rechnungsadresse ändern</p>
@@ -64,6 +67,7 @@
             </div>
         </div>
         <div class="split thirdSplit">
+            <p>Notizen:</p>
             <div class="notizen notizenHoch">
                 <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
                 </textarea>
