--- a/src/app/_popupKomponente/gruppen/gruppen.component.html
+++ b/src/app/_popupKomponente/gruppen/gruppen.component.html
@@ -1,1 +1,23 @@
-<p>gruppen works!</p>
+<div class="popupWindow">
+    <div class="popupHeader">
+        <div class="headerBezeichnung">
+            <p>Gruppen bearbeiten</p>
+        </div>
+        <div class="closeTab">
+            <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
+        </div>
+    </div>
+    <div class="popupContent">
+        <div class="split firstSplit">
+        </div>
+        <div class="split secondSplit">
+        </div>
+        <div class="split thirdSplit">
+        </div>
+    </div>
+    <div class="popupFooter">
+        <div class="btnBearbeiten btnSpeichern">
+            <p>Änderungen speichern</p>
+        </div>
+    </div>
+</div>
