--- a/src/app/_popupKomponente/meilenstein/meilenstein.component.html
+++ b/src/app/_popupKomponente/meilenstein/meilenstein.component.html
@@ -34,15 +34,22 @@
             <p>Arbeitspakete:</p>
             <div class="arbeitspakete">
                 <input type="text" class="readOnly" value="Arbeitspaket">
-                <label class="chbContainer" for="chbLogin">
-                    <input type="checkbox" id="chbLogin">
-                    <span class="checkmark"><p>&#10004;</p></span>
-                </label>
                 <input type="text" class="readOnly" value="Arbeitspaket">
-                <label class="chbContainer" for="chbLogin">
-                    <input type="checkbox" id="chbLogin">
-                    <span class="checkmark"><p>&#10004;</p></span>
-                </label>
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+                <input type="text" class="readOnly" value="Arbeitspaket">
+
             </div>
             <div class="btnBearbeiten btnMeilensteinHinzufuegen">
                 <p>+</p>
