--- a/src/app/_popupKomponente/metainformationen/metainformationen.component.html
+++ b/src/app/_popupKomponente/metainformationen/metainformationen.component.html
@@ -8,11 +8,71 @@
         </div>
     </div>
     <div class="popupContent">
-        <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div class="metaContent">
+            <div class="metaList">
+                <p>
+                    Vorgangsnummer
+                </p>
+                <p>
+                    XX XX-XXX
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    Vorgangsart
+                </p>
+                <p>
+                    Auftrag
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    Vorgang
+                </p>
+                <p>
+                    Thomas Brändle AG
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    Status
+                </p>
+                <p>
+                    Offen
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    Datum erfasst
+                </p>
+                <p>
+                    07.11.2022 | 19:00
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    User erfasst
+                </p>
+                <p>
+                    Thomas Brändle
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    Datum zuletzt gespeichert
+                </p>
+                <p>
+                    25.11.2022 | 14:44
+                </p>
+            </div>
+            <div class="metaList">
+                <p>
+                    User zuletzt gespeichert
+                </p>
+                <p>
+                    Thomas Brändle
+                </p>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
