--- a/src/app/_popupKomponente/metainformationen/metainformationen.component.sass
+++ b/src/app/_popupKomponente/metainformationen/metainformationen.component.sass
@@ -1,2 +1,14 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+
+.metaContent
+    margin-left: 40px
+    background-color: $tableColor
+    border-radius: 8px
+    padding: 10px
+    div
+        margin-left: 15px
+        display: flex
+
+.metaList p:nth-child(1)
+    width: 250px
