--- a/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
+++ b/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
@@ -22,6 +22,9 @@
             <div class="btnBearbeiten">
                 <p>Neue Adresse speichern</p>
             </div>
+            <div class="btnBearbeiten">
+                <p>Ausgewählte Adresse löschen</p>
+            </div>
         </div>
         <div class="split oneThird">
             <p>Adressliste:</p>
