--- a/src/app/_popupKomponente/stunden/stunden.component.html
+++ b/src/app/_popupKomponente/stunden/stunden.component.html
@@ -8,11 +8,31 @@
         </div>
     </div>
     <div class="popupContent">
-        <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div>
+            <div class="th splitStunden">
+                <p class="inputDate">Datum:</p>
+                <p class="inputSelect">Meilenstein:</p>
+                <p class="inputText">Arbeitspaket/Leistung:</p>
+                <p class="inputTime">h:</p>
+                <p class="inputTime">min:</p>
+            </div>
+            <div class="stunden splitStunden">
+                <input class="inputDate" type="date">
+                <select class="inputSelect" name="meilenstein" id="meilenstein">
+                    <option value="Meilenstein">Meilenstein</option>
+                    <option value="Meilenstein">Meilenstein</option>
+                    <option value="Meilenstein">Meilenstein</option>
+                    <option value="Meilenstein">Meilenstein</option>
+                </select>
+                <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                <input class="inputTime" type="text" value="5h">
+                <input class="inputTime" type="text" value="40min">
+            </div>
+            <div class="stundenHinzufuegen splitStunden">
+                <div class="btnBearbeiten">
+                    <p>+</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
