--- a/src/app/_popupKomponente/stunden/stunden.component.sass
+++ b/src/app/_popupKomponente/stunden/stunden.component.sass
@@ -1,2 +1,32 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+.popupContent
+    margin-left: 40px
+
+.popupContent div
+    display: -webkit-inline-box
+
+.inputDate,
+.inputText,
+.inputTime,
+.inputSelect
+    padding-left: 5px
+    margin: 5px
+    vertical-align: middle
+
+.inputDate
+    width: 120px
+    height: 15px
+
+.inputText
+    width: 270px
+
+.inputTime
+    width: 50px
+
+.inputSelect
+    width: 250px
+
+.stundenHinzufuegen
+    display: block
+    width: 500px
