--- a/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
+++ b/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
@@ -53,6 +53,7 @@
 
         </div>
         <div class="split thirdSplit">
+            <p>Notizen:</p>
             <div class="notizen notizenHoch">
                 <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
                 </textarea>
