--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -71,7 +71,7 @@
 .contentReadonly
     background-color: $tableColor
     border: 1px solid transparent
-    border-radius: 8px
+    border-radius: 5px
     margin-bottom: 10px
 
 /* Content */
@@ -88,29 +88,29 @@
 .notizenBearbeiten
     height: calc(510px - 110px)
     margin-left: 40px
-    margin-right: 10px
+    margin-right: 15px
 
 .notizenBearbeiten textarea
     border: 1px solid $borderColor
-    border-radius: 8px
+    border-radius: 5px
     background-color: white
     height: 100%
     width: 100%
 
 textarea
     border: 1px solid $borderColor
-    border-radius: 8px
+    border-radius: 5px
     resize: none
     padding: 5px
-    padding-right: 0px
-    width: 100%
+    margin-bottom: 5px
+    width: 98%
     &:focus
         outline: none
 
 input
     width: 100%
     border: 1px solid $borderColor
-    border-radius: 8px
+    border-radius: 5px
     padding: 5px
     margin-bottom: 5px
     padding-right: 0px
@@ -190,7 +190,7 @@ input
     height: 25px
     background-color: white
     border: 1px solid $borderColor
-    border-radius: 8px
+    border-radius: 5px
 
 .searchBarSmallPopup input
     background-color: white
@@ -223,5 +223,5 @@ input
     position: relative
     width: calc( calc(894px - 130px) /3 )
     right: -600px
-    bottom: 0px
+    bottom: 15px
 
